--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -80,5 +80,8 @@
         <Menu mnemonicParsing="false" text="Generación">
             <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Histograma" />
         </Menu>
+        <Menu mnemonicParsing="false" text="Algebra">
+            <MenuItem mnemonicParsing="false" onAction="#calculateImagesOperations" text="Operaciones sobre imágenes" />
+        </Menu>
     </MenuBar>
 </AnchorPane>
