--- a/src/main/resources/view/images_operations_scene_view.fxml
+++ b/src/main/resources/view/images_operations_scene_view.fxml
@@ -20,7 +20,7 @@
                     <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true"/>
                 </center>
                 <bottom>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Resultant Image" BorderPane.alignment="CENTER"/>
+                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Imagen resultante" BorderPane.alignment="CENTER"/>
                 </bottom>
             </BorderPane>
             <BorderPane prefHeight="328.0" prefWidth="311.0" GridPane.columnIndex="1">
@@ -28,7 +28,7 @@
                     <ImageView fx:id="image1" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER"/>
                 </center>
                 <bottom>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Image 1" BorderPane.alignment="CENTER"/>
+                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Primera imagen" BorderPane.alignment="CENTER"/>
                 </bottom>
             </BorderPane>
             <BorderPane prefHeight="335.0" prefWidth="300.0" GridPane.columnIndex="2">
@@ -36,19 +36,20 @@
                     <ImageView fx:id="image2" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER"/>
                 </center>
                 <bottom>
-                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Image 2" BorderPane.alignment="CENTER"/>
+                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda imagen" BorderPane.alignment="CENTER"/>
                 </bottom>
             </BorderPane>
         </GridPane>
     </AnchorPane>
     <MenuBar>
         <Menu mnemonicParsing="false" text="Seleccionar Imáges">
-            <MenuItem mnemonicParsing="false" onAction="#loadImage1" text="Image 1"/>
-            <MenuItem mnemonicParsing="false" onAction="#loadImage2" text="Image 2"/>
+            <MenuItem mnemonicParsing="false" onAction="#loadImage1" text="Primera imagen"/>
+            <MenuItem mnemonicParsing="false" onAction="#loadImage2" text="Segunda imagen"/>
         </Menu>
         <Menu mnemonicParsing="false" text="Operaciones">
             <MenuItem mnemonicParsing="false" onAction="#makeImagesSum" text="Sumar"/>
             <MenuItem mnemonicParsing="false" onAction="#makeImagesSubstraction" text="Restar" />
+            <MenuItem mnemonicParsing="false" onAction="#makeImagesMultiplication" text="Multiplicar" />
         </Menu>
     </MenuBar>
 </AnchorPane>
