Implemento negativo de una imagen

--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -79,6 +79,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Generación">
             <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Histograma" />
+            <MenuItem mnemonicParsing="false" onAction="#calculateNegativeImage" text="Negativo" />
         </Menu>
         <Menu mnemonicParsing="false" text="Algebra">
             <MenuItem mnemonicParsing="false" onAction="#calculateImagesOperations" text="Operaciones sobre imágenes" />
