--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -89,7 +89,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Filtros">
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMedia" text="Media" />
-            <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMedianaPonderada" text="Media ponderada" />
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMedianaPonderada" text="Mediana ponderada" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMediana" text="Mediana" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroGausseano" text="Gauss" />
         </Menu>
