--- a/src/main/resources/view/exponential_scene_view.fxml
+++ b/src/main/resources/view/exponential_scene_view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="141.0" prefWidth="195.0" xmlns="http://javafx.com/javafx/8.0.121"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ExponentialSceneController">
-    <Label layoutX="11.0" layoutY="22.0" text="Enter positive lambda parameter"/>
+    <Label layoutX="11.0" layoutY="22.0" text="Ingrese un lamnda (positivo)"/>
     <TextField fx:id="lambdaTextField" layoutX="64.0" layoutY="58.0" prefHeight="25.0" prefWidth="67.0"/>
-    <Button layoutX="65.0" layoutY="102.0" mnemonicParsing="false" onAction="#generate" text="Generate"/>
+    <Button layoutX="65.0" layoutY="102.0" mnemonicParsing="false" onAction="#generar" text="Aceptar"/>
 </AnchorPane>
