--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -77,12 +77,19 @@
             <MenuItem mnemonicParsing="false" onAction="#saveModifiedImage" text="Guardar" />
             <MenuItem mnemonicParsing="false" onAction="#close" text="Cerrar" />
         </Menu>
-        <Menu mnemonicParsing="false" text="Generación">
+        <Menu mnemonicParsing="false" text="Generar">
             <Menu mnemonicParsing="false" text="Números Random">
                 <MenuItem mnemonicParsing="false" onAction="#generarNumeroRandomGaussiano" text="Gaussiano" />
                 <MenuItem mnemonicParsing="false" onAction="#generarNumeroRandomRayleigh" text="Rayleigh" />
                 <MenuItem mnemonicParsing="false" onAction="#generarNumeroRandomExponencial" text="Exponencial" />
             </Menu>
+            <Menu mnemonicParsing="false" text="Imágenes sintéticas del ruido">
+                <MenuItem mnemonicParsing="false" onAction="#generarImagenSinteticaRuidoGaussiano" text="Gaussiano" />
+                <MenuItem mnemonicParsing="false" onAction="#generarImagenSinteticaRuidoRayleigh" text="Rayleigh" />
+                <MenuItem mnemonicParsing="false" onAction="#generarImagenSinteticaRuidoExponencial" text="Exponencial" />
+
+            </Menu>
+
             <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Histograma" />
             <MenuItem mnemonicParsing="false" onAction="#calculateNegativeImage" text="Negativo" />
         </Menu>
