--- a/src/main/resources/view/gamma_scene_view.fxml
+++ b/src/main/resources/view/gamma_scene_view.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="143.0" prefWidth="383.0" xmlns="http://javafx.com/javafx/8.0.121"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.GammaSceneController">
-    <Label layoutX="138.0" layoutY="14.0" text="Insert Gamma Value"/>
-    <Label layoutX="10.0" layoutY="40.0" text="REMEMBER: Gamma must be between 0 and 2, but cannot be 0 or  1"/>
+    <Label layoutX="138.0" layoutY="14.0" text="Insertar valor Gamma"/>
+    <Label layoutX="10.0" layoutY="40.0" text="IMPORTANTE: valor Gamma debe ser entre (0-2] y no puede ser 0 o 1"/>
     <TextField fx:id="gammaTextField" layoutX="157.0" layoutY="72.0" prefHeight="25.0" prefWidth="69.0"/>
-    <Button layoutX="144.0" layoutY="104.0" mnemonicParsing="false" onAction="#applyFunction" text="Apply Function"/>
+    <Button layoutX="144.0" layoutY="104.0" mnemonicParsing="false" onAction="#aplicarFuncion" text="Aplicar función"/>
 </AnchorPane>
