Implemento mascara de prewitt direccional derivativa

--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -126,8 +126,9 @@
             <MenuItem mnemonicParsing="false" onAction="#onAplicarDetectorBordesSobel" text="Máscara Sobel" />
             <MenuItem mnemonicParsing="false" onAction="#OnAplicarDetectorBordesPrewitt" text="Máscara Prewitt" />
         </Menu>
-        <Menu mnemonicParsing="false" text="Operadores derivativos direccionales">
-            <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDeSobel" text="Máscara derivativa direccional de Sobel" />
+        <Menu mnemonicParsing="false" text="Operadores direccionales derivativos">
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDeSobel" text="Máscara direccional derivativa de Sobel" />
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDePrewitt" text="Máscara direccional derivativa de Prewitt" />
         </Menu>
     </MenuBar>
 </AnchorPane>
