Implemento mascara standard direccional derivativa

--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -130,6 +130,7 @@
             <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDeSobel" text="Máscara direccional derivativa de Sobel" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDePrewitt" text="Máscara direccional derivativa de Prewitt" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraDerivativaDireccionalDeKirsh" text="Máscara direccional derivativa de Kirsh" />
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarMascaraStadardDerivativaDireccional" text="Máscara direccional derivativa Standard" />
         </Menu>
     </MenuBar>
 </AnchorPane>
