--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -116,6 +116,7 @@
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMedianaPonderada" text="Mediana ponderada" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroMediana" text="Mediana" />
             <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroGausseano" text="Gauss" />
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarFiltroBilateral" text="Bilateral" />
         </Menu>
         <Menu mnemonicParsing="false" text="Umbral">
             <MenuItem mnemonicParsing="false" onAction="#umbralizar" text="Umbralizar" />
