--- a/src/main/resources/view/canny_scene_view.fxml
+++ b/src/main/resources/view/canny_scene_view.fxml
@@ -8,12 +8,12 @@
 
 <AnchorPane prefHeight="143.0" prefWidth="404.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.CannySceneController">
    <children>
-      <Label layoutX="24.0" layoutY="28.0" text="Gaussian filter sigma value" />
-      <Label layoutX="198.0" layoutY="28.0" text="T1 threshold" />
-      <Label layoutX="306.0" layoutY="28.0" text="T2 threshold" />
+      <Label layoutX="24.0" layoutY="28.0" text="sigma Filtro Gausseano" />
+      <Label layoutX="198.0" layoutY="28.0" text="límite T1" />
+      <Label layoutX="306.0" layoutY="28.0" text="límite T2" />
       <TextField fx:id="sigmaTextField" layoutX="71.0" layoutY="62.0" prefHeight="25.0" prefWidth="48.0" />
       <TextField fx:id="t1TextField" layoutX="208.0" layoutY="62.0" prefHeight="25.0" prefWidth="48.0" />
       <TextField fx:id="t2TextField" layoutX="316.0" layoutY="62.0" prefHeight="25.0" prefWidth="48.0" />
-      <Button layoutX="176.0" layoutY="104.0" mnemonicParsing="false" onAction="#onApply" text="Apply" />
+      <Button layoutX="176.0" layoutY="104.0" mnemonicParsing="false" onAction="#aplicar" text="Aplicar" />
    </children>
 </AnchorPane>
