--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -145,6 +145,14 @@
                     <MenuItem mnemonicParsing="false" onAction="#onAplicarMarrHildrethDetectorDeBorde" text="Marr-Hildreth (Gaussiano-Laplaciano)" />
                 </items>
             </Menu>
+            <Menu mnemonicParsing="false" text="Complejos">
+                <items>
+                    <MenuItem mnemonicParsing="false" onAction="#aplicarCanny" text="Canny" />
+                    <MenuItem mnemonicParsing="false" onAction="#aplicarSusan" text="Susan" />
+                    <MenuItem mnemonicParsing="false" onAction="#aplicarHough" text="Hough Transform" />
+                </items>
+            </Menu>
+
         </Menu>
         <Menu mnemonicParsing="false" text="Anistropía">
             <MenuItem mnemonicParsing="false" onAction="#onAplicarDifusion" text="Difusión" />
